vault backup: 2022-10-28 13:42:34
Affected files:
.obsidian_mac/workspace.json
Home.md
index/java/framework/junit.md